[gd_scene load_steps=16 format=2]

[ext_resource path="res://ui/theme/fonts/font_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui/theme/gdscript_app_theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/theme/panel_normal.tres" type="StyleBox" id=3]
[ext_resource path="res://ui/theme/fonts/font_title_big.tres" type="DynamicFont" id=4]
[ext_resource path="res://ui/screens/lesson/quizzes/UIQuizChoice.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/icons/icon_report.png" type="Texture" id=6]
[ext_resource path="res://ui/screens/welcome_screen/RunDrawSquareIntro.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/screens/welcome_screen/WelcomeScreen.gd" type="Script" id=8]
[ext_resource path="res://ui/components/BigGreenButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/theme/panel_breadcrumbs.tres" type="StyleBox" id=10]
[ext_resource path="res://ui/components/FullScreenButton.tscn" type="PackedScene" id=11]
[ext_resource path="res://icon.png" type="Texture" id=12]
[ext_resource path="res://addons/SmoothScroll/SmoothScrollContainer.gd" type="Script" id=13]
[ext_resource path="res://ui/screens/welcome_screen/test_quiz.tres" type="Resource" id=14]
[ext_resource path="res://ui/components/GDQuestLogo.tscn" type="PackedScene" id=15]

[node name="WelcomeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 2495, 16 )
theme = ExtResource( 2 )
script = ExtResource( 8 )
__meta__ = {
"_edit_horizontal_guides_": [ 1060.0 ]
}

[node name="Layout" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="PanelContainer" parent="Layout"]
margin_right = 1920.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 40 )
custom_styles/panel = ExtResource( 10 )

[node name="MarginContainer" type="MarginContainer" parent="Layout/TopBar"]
margin_right = 1920.0
margin_bottom = 48.0
custom_constants/margin_right = 12
custom_constants/margin_top = 0
custom_constants/margin_left = 12
custom_constants/margin_bottom = 0

[node name="ToolBarLayout" type="HBoxContainer" parent="Layout/TopBar/MarginContainer"]
margin_left = 12.0
margin_right = 1908.0
margin_bottom = 48.0
alignment = 2

[node name="ReportButton" type="Button" parent="Layout/TopBar/MarginContainer/ToolBarLayout"]
margin_left = 1584.0
margin_right = 1840.0
margin_bottom = 48.0
mouse_default_cursor_shape = 2
text = "Report an issue"
icon = ExtResource( 6 )

[node name="FullScreenButton" parent="Layout/TopBar/MarginContainer/ToolBarLayout" instance=ExtResource( 11 )]
margin_left = 1856.0
margin_top = 4.0
margin_right = 1896.0
margin_bottom = 44.0
mouse_default_cursor_shape = 2

[node name="MarginContainer" type="MarginContainer" parent="Layout"]
margin_left = 310.0
margin_top = 64.0
margin_right = 1610.0
margin_bottom = 1080.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="ColumnLayout" type="HBoxContainer" parent="Layout/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1280.0
margin_bottom = 996.0
mouse_filter = 2
alignment = 1

[node name="MainColumn" type="VBoxContainer" parent="Layout/MarginContainer/ColumnLayout"]
margin_right = 888.0
margin_bottom = 976.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="WelcomeTitle" type="PanelContainer" parent="Layout/MarginContainer/ColumnLayout/MainColumn"]
margin_right = 888.0
margin_bottom = 136.0
mouse_filter = 2
custom_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Layout/MarginContainer/ColumnLayout/MainColumn/WelcomeTitle"]
margin_left = 8.0
margin_top = 8.0
margin_right = 880.0
margin_bottom = 128.0
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="Layout/MarginContainer/ColumnLayout/MainColumn/WelcomeTitle/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 852.0
margin_bottom = 100.0
rect_min_size = Vector2( 80, 80 )
mouse_filter = 2
texture = ExtResource( 12 )
expand = true
stretch_mode = 5

[node name="TitleLabel" type="Label" parent="Layout/MarginContainer/ColumnLayout/MainColumn/WelcomeTitle/MarginContainer"]
margin_left = 20.0
margin_top = 40.0
margin_right = 852.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 4 )
text = "Learn GDScript From Zero"
align = 1
valign = 1

[node name="MainContent" type="PanelContainer" parent="Layout/MarginContainer/ColumnLayout/MainColumn"]
margin_top = 152.0
margin_right = 888.0
margin_bottom = 976.0
mouse_filter = 2
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent"]
margin_left = 8.0
margin_top = 8.0
margin_right = 880.0
margin_bottom = 816.0
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 852.0
margin_bottom = 788.0
focus_neighbour_top = NodePath(".")
focus_neighbour_bottom = NodePath(".")
focus_mode = 1
mouse_filter = 1
scroll_horizontal_enabled = false
script = ExtResource( 13 )

[node name="MarginContainer" type="MarginContainer" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent/MarginContainer/ScrollContainer"]
margin_right = 820.0
margin_bottom = 2023.0
mouse_filter = 2
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent/MarginContainer/ScrollContainer/MarginContainer"]
margin_right = 800.0
margin_bottom = 2023.0
custom_constants/separation = 32

[node name="RichTextLabel" type="RichTextLabel" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 100 )
mouse_filter = 1
size_flags_horizontal = 6
bbcode_enabled = true
bbcode_text = "GDScript Learn is a Free and Open-Source app and series to help you learn to code, [b]from zero[/b], with Godot's GDScript programming language.

Whether you want to learn game development or just learn to code with exciting interactive projects, this app is for you.

[font=res://ui/theme/fonts/font_title.tres]Programming is a skill[/font]

Programming is a skill, so to get good at it, you need to [i]practice[/i]. You need to see the code in action and to [i]experiment[/i].

That's why we created this app: it makes it easy for you to learn, with interactive demos."
text = "GDScript Learn is a Free and Open-Source app and series to help you learn to code, from zero, with Godot's GDScript programming language.

Whether you want to learn game development or just learn to code with exciting interactive projects, this app is for you.

Programming is a skill

Programming is a skill, so to get good at it, you need to practice. You need to see the code in action and to experiment.

That's why we created this app: it makes it easy for you to learn, with interactive demos."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExampleMoveAndRotate" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 412.0
margin_right = 800.0
margin_bottom = 772.0
rect_min_size = Vector2( 0, 340 )
mouse_filter = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 804.0
margin_right = 800.0
margin_bottom = 833.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 0 )
mouse_filter = 1
size_flags_horizontal = 6
bbcode_enabled = true
bbcode_text = "Mini quizzes in the lessons will help you test and remember what you learned."
text = "Mini quizzes in the lessons will help you test and remember what you learned."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UIQuizChoice" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 865.0
margin_right = 800.0
margin_bottom = 865.0
mouse_filter = 1
test_quiz = ExtResource( 14 )

[node name="RichTextLabel3" type="RichTextLabel" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 897.0
margin_right = 800.0
margin_bottom = 1891.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 100 )
mouse_filter = 1
size_flags_horizontal = 6
bbcode_enabled = true
bbcode_text = "[b]Every lesson[/b] ends with one or more [i]practices[/i].

You'll discover the practice screen at the end of the first lesson.

[img=800]res://ui/screens/welcome_screen/ui-screen.png[/img]

[font=res://ui/theme/fonts/font_title.tres]There are no hidden fees[/font]

1600 backers who pre-ordered our course [url=https://kickstarter.com/projects/gdquest/learn-to-code-from-zero-with-godot-the-free-game-engine/]on Kickstarter[/url] funded this app.

As a result, we could make everything in here [b]free for everyone[/b].

This free app is the complete course to get you up to speed with Godot's GDScript programming language.

It complements the [url=https://docs.godotengine.org/en/3.4/getting_started/introduction/index.html]free course[/url] you will find in the Godot documentation (we worked a lot on it too).

If you then want to go further and support our work, you can buy (or gift) one of our [url=https://gdquest.mavenseed.com/courses]Godot courses[/url]."
text = "Every lesson ends with one or more practices.

You'll discover the practice screen at the end of the first lesson.



There are no hidden fees

1600 backers who pre-ordered our course on Kickstarter funded this app.

As a result, we could make everything in here free for everyone.

This free app is the complete course to get you up to speed with Godot's GDScript programming language.

It complements the free course you will find in the Godot documentation (we worked a lot on it too).

If you then want to go further and support our work, you can buy (or gift) one of our Godot courses."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="Layout/MarginContainer/ColumnLayout/MainColumn/MainContent/MarginContainer/ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 1923.0
margin_right = 800.0
margin_bottom = 2023.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 800, 100 )
mouse_filter = 1
size_flags_horizontal = 6
bbcode_enabled = true
bbcode_text = "[font=res://ui/theme/fonts/font_title.tres]Get started now[/font]

To get started, click the [i]Start Course[/i] button to the right."
text = "Get started now

To get started, click the Start Course button to the right."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideColumn" type="VBoxContainer" parent="Layout/MarginContainer/ColumnLayout"]
margin_left = 904.0
margin_right = 1260.0
margin_bottom = 976.0
size_flags_horizontal = 3

[node name="Disclaimer" type="PanelContainer" parent="Layout/MarginContainer/ColumnLayout/SideColumn"]
margin_right = 356.0
margin_bottom = 539.0
custom_styles/panel = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Layout/MarginContainer/ColumnLayout/SideColumn/Disclaimer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 348.0
margin_bottom = 531.0

[node name="VBoxContainer" type="VBoxContainer" parent="Layout/MarginContainer/ColumnLayout/SideColumn/Disclaimer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 320.0
margin_bottom = 503.0

[node name="HBoxContainer" type="HBoxContainer" parent="Layout/MarginContainer/ColumnLayout/SideColumn/Disclaimer/MarginContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 32.0
custom_constants/separation = 8

[node name="IconReport" type="TextureRect" parent="Layout/MarginContainer/ColumnLayout/SideColumn/Disclaimer/MarginContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 0.960784, 0.25098, 1 )
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Layout/MarginContainer/ColumnLayout/SideColumn/Disclaimer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_right = 263.0
margin_bottom = 31.0
custom_fonts/font = ExtResource( 1 )
text = "Early beta release"

[node name="RichTextLabel" type="RichTextLabel" parent="Layout/MarginContainer/ColumnLayout/SideColumn/Disclaimer/MarginContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 300.0
margin_bottom = 483.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 160 )
size_flags_horizontal = 6
bbcode_enabled = true
bbcode_text = "The app is in [b]beta[/b].

You may encounter bugs and typos. We have many improvements and lessons planned.

If you face any problem, please use the button in the top-right to report it to us.

[b]It is crucial[/b]: we'll use your reports and feedback to improve the app, both for you and everyone else."
text = "The app is in beta.

You may encounter bugs and typos. We have many improvements and lessons planned.

If you face any problem, please use the button in the top-right to report it to us.

It is crucial: we'll use your reports and feedback to improve the app, both for you and everyone else."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="Layout/MarginContainer/ColumnLayout/SideColumn"]
margin_top = 555.0
margin_right = 356.0
margin_bottom = 754.0
size_flags_vertical = 3

[node name="SettingsButton" type="Button" parent="Layout/MarginContainer/ColumnLayout/SideColumn"]
margin_top = 770.0
margin_right = 356.0
margin_bottom = 817.0
mouse_default_cursor_shape = 2
text = "Configure the App"

[node name="OutlinerButton" type="Button" parent="Layout/MarginContainer/ColumnLayout/SideColumn"]
margin_top = 833.0
margin_right = 356.0
margin_bottom = 880.0
mouse_default_cursor_shape = 2
text = "Open Course Index"

[node name="StartButton" parent="Layout/MarginContainer/ColumnLayout/SideColumn" instance=ExtResource( 9 )]
text = "Start Course"

[node name="GDQuestLogo" parent="." instance=ExtResource( 15 )]
modulate = Color( 0.572549, 0.560784, 0.721569, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 86.0
margin_top = -80.0
margin_right = 267.0
margin_bottom = -24.0
